html 프로젝트 기능 추가 (메뉴바 양쪽 끝에 알파값 추가)

--- a/프로젝트로배우는HTMLCSS_05진입페이지/assets/css/styles.css
+++ b/프로젝트로배우는HTMLCSS_05진입페이지/assets/css/styles.css
@@ -221,6 +221,14 @@ textarea::-ms-reveal {
 }
 .menu-category-area .common-inner::after {
   content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 18px;
+  height: 100%;
+  background-image: linear-gradient(to left, red, rgba(255, 255, 255, 0));
+  pointer-events: none;
+  z-index: 1;
 }
 .menu-category-area .category-list {
   display: flex;
