--- a/프로젝트로배우는HTMLCSS_05진입페이지/assets/scss/components/_menu_category_area.scss
+++ b/프로젝트로배우는HTMLCSS_05진입페이지/assets/scss/components/_menu_category_area.scss
@@ -21,6 +21,14 @@
         }
         &::after {
             content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: $m-padding;
+            height: 100%;
+            background-image: linear-gradient(to left, red , rgba(255,255,255,0));
+            pointer-events: none;
+            z-index: 1;
         }
     }
 
