--- a/프로젝트로배우는HTMLCSS_05진입페이지/assets/scss/components/_menu_category_area.scss
+++ b/프로젝트로배우는HTMLCSS_05진입페이지/assets/scss/components/_menu_category_area.scss
@@ -15,12 +15,20 @@
             left: 0;
             width: $m-padding;
             height: 100%;
-            background-image: linear-gradient(to right, red , rgba(255,255,255,0));
+            background-image: linear-gradient(to right, #fff 25%, rgba(255,255,255,0));
             pointer-events: none;
             z-index: 1;
         }
         &::after {
             content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: $m-padding;
+            height: 100%;
+            background-image: linear-gradient(to right, rgba(255,255,255,0) 25%, #fff);
+            pointer-events: none;
+            z-index: 1;
         }
     }
 
